Closed
Bug 38269
Opened 26 years ago
Closed 26 years ago
Several events crash the browser
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Core
DOM: UI Events & Focus Handling
Tracking
()
VERIFIED
FIXED
People
(Reporter: ckritzer, Assigned: joki)
References
()
Details
(Keywords: crash, Whiteboard: [nsbeta2+])
Attachments
(6 files)
I may have to break this out into different bugs. In that event (pun intended),
I'll make this bug a tracking bug...
Overview: The events 'onUnload', 'onFocus', 'onSubmit', 'onReset', and
'onChange' crash the browser when fired.
Steps to Reproduce:
1) Load the above page or the attached testcases
2) Follow the directions on the page/testcase
3) Crash, crash, crash...
Actual Result: Crash and burn, baby...
Expected Result: Event will fire and you will see the notification on the page
Platforms Tested on:
- MacOS9 2000-05-04-08-M16 Commercial Build
- Linux6 2000-05-04-08-M16 Commercial Build
- Win98 2000-05-04-09-M16 Commercial Build
Additional Comments: n/a
| Reporter | ||
Comment 2•26 years ago
|
||
| Reporter | ||
Comment 3•26 years ago
|
||
| Reporter | ||
Comment 4•26 years ago
|
||
| Reporter | ||
Comment 5•26 years ago
|
||
| Reporter | ||
Comment 6•26 years ago
|
||
| Reporter | ||
Comment 7•26 years ago
|
||
| Reporter | ||
Comment 8•26 years ago
|
||
Sorry, the "05/05/00 06:52 onload event testcase part 'a'" should actually be
*onunload*, not onload...
More coffee please...
| Reporter | ||
Comment 9•26 years ago
|
||
Nominating for nsbeta2 based on:
- Key functionality broken (HIGH visibility)
Keywords: nsbeta2
Comment 10•26 years ago
|
||
Bugs very similar to these are causing the xmlterm extension to crash badly.
So I'm voting for this bug.
| Assignee | ||
Comment 13•26 years ago
|
||
Okay, the onchange was fixed before 5/16 due to a dupe bug.
Fixes just checked in for the remaining crashes.
One note on the unload event crash. The crash was due to recursive firing of
the unload event by setting the page location during on unload event. The crash
is fixed but the page still behaves differently than in 4.x. In 4.x the loading
page would flash and then the js-set location would come up. In mozilla this is
reversed, the js-set location flashes and then the new page loads. I discussed
this with vidur and we both agree that the 4.x behavior was incidental and not
designed so we're not going out of our way to be compatible with it. The crash
is still fixed though so this bug is still closing.
Marking fixed.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 14•26 years ago
|
||
Marking VERIFED FIXED on:
- MacOS9 2000-06-01-20-M16 Commercial Build
- Linux6 2000-06-01-20-M16 Commercial Build
- Win98 2000-06-01-21-M16 Commercial Build
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•