Fixes for bug 38269. Fixes crash during page rewrite in focus, reset, submit and location change in onunload.  r:mjudge